# auralink

./: .geminiignore  .gitignore  Cargo.toml  PKGBUILD  README.md  auralink-debug-0.1.4-1-x86_64.pkg.tar.zst  auralink.desktop  build.rs  build_all.sh  install.sh  test.slint  test_slint
auralink/: FETCH_HEAD  config  packed-refs
auralink/objects/pack/: pack-0b0941b7fd904cd99c509f00aa90339fb24d0f9f.idx  pack-0b0941b7fd904cd99c509f00aa90339fb24d0f9f.rev
auralink/refs/tags/: v0.1.0  v0.1.2  v0.1.3  v0.1.4  v0.1.4-1
deb/DEBIAN/: control
docs/superpowers/plans/: 2026-04-01-auralink-status-impl.md
docs/superpowers/specs/: 2026-04-01-auralink-cli-status-design.md
output/: auralink_0.1.4-1_amd64.deb
pkg/auralink/: .BUILDINFO  .MTREE  .PKGINFO
pkg/auralink-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/auralink/usr/share/applications/: auralink-bt.desktop
squashfs-root/: .DirIcon  AppRun  auralink.desktop
squashfs-root/usr/lib/: libb2.so.1  libdouble-conversion.so.3  libglib-2.0.so.0  libgomp.so.1  libicuuc.so.78  libmd4c.so.0  libpcre2-16.so.0  libpng16.so.16  libsystemd.so.0  libxcb-composite.so.0  libxcb-dpms.so.0  libxcb-ewmh.so.2.0.0  libxcb-present.so.0  libxcb-record.so.0  libxcb-screensaver.so.0  libxcb-xf86dri.so.0.0.0  libxcb-xtest.so.0.0.0  libxcb-xv.so.0.0.0
squashfs-root/usr/share/applications/: auralink.desktop
src/: bt_backend.rs  bt_main.rs  main.rs  nm_backend.rs
ui/: bluetooth.slint  wifi.slint
