[package]
name = "auralink"
version = "0.1.0"
edition = "2024"

[package.metadata.deb]
name = "auralink"
maintainer = "rajchauhan28"
copyright = "2026, rajchauhan28"
license-file = ["README.md", "0"]
depends = "libc6, libstdc++6, libgcc-s1"
section = "net"
priority = "optional"
assets = [
    ["target/release/auralink", "usr/bin/auralink", "755"],
    ["auralink.desktop", "usr/share/applications/auralink.desktop", "644"],
    ["assets/auralink.svg", "usr/share/icons/hicolor/scalable/apps/auralink.svg", "644"],
]

[dependencies]
slint = "1.15.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
rfd = "0.15.2"

[build-dependencies]
slint-build = "1.15.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
