[package]
name = "auralink"
version = "0.1.0"
description = "A modern, lightweight, and aesthetic Wi-Fi and VPN manager for Linux."
edition = "2024"

[[bin]]
name = "auralink"
path = "src/main.rs"

[package.metadata.deb]
name = "auralink"
maintainer = "rajchauhan28"
copyright = "2026, rajchauhan28"
license-file = ["README.md", "0"]
depends = "libc6, libstdc++6, libgcc-s1"
section = "net"
priority = "optional"
assets = [
    ["target/release/auralink", "usr/bin/auralink", "755"],
    ["auralink.desktop", "usr/share/applications/auralink.desktop", "644"],
    ["assets/auralink.svg", "usr/share/icons/hicolor/scalable/apps/auralink.svg", "644"],
]

[dependencies]
slint = { version = "1.15.1", default-features = false, features = ["std", "slint-macros", "backend-winit", "renderer-femtovg", "compat-1-2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
rfd = "0.15.2"

[build-dependencies]
slint-build = "1.15.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
